--- a/TooLate/GamePractice/GamePractice/TooLate.csproj
+++ b/TooLate/GamePractice/GamePractice/TooLate.csproj
@@ -73,6 +73,11 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Bus.cs" />
+    <Compile Include="Model\Enemy.cs" />
+    <Compile Include="Model\Level.cs" />
+    <Compile Include="Model\Player.cs" />
+    <Compile Include="Model\Tile.cs" />
     <Compile Include="ScreenState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
@@ -123,13 +128,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
