--- a/TooLate/GamePractice/GamePractice/TooLate.csproj
+++ b/TooLate/GamePractice/GamePractice/TooLate.csproj
@@ -128,7 +128,10 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Etat\" />
+    <Folder Include="Strategy\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
